syntax = "proto3";
package auth;

option java_package = "com.zunf.tankbattleclient.protobuf.game.auth";
option java_outer_classname = "AuthProto";

message LoginRequest {
  string token = 1;
}

message LoginResponse {
  int64 player_id = 1;
  string player_name = 2;
  string player_account = 3;
}
